--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-buddy/ide-toolbox-next": "^2.4.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.64.0",
-    "@react-buddy/ide-toolbox-next": "^2.4.1"
+    "sass": "^1.64.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
