--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.64.0",
+    "sass": "^1.64.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
