--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.64.0"
+    "sass": "^1.64.0",
+    "vercel": "^31.1.0"
   },
   "devDependencies": {
     "@types/react": "18.2.16",
