--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/supabase-js": "^2.32.0",
     "dotenv": "^16.3.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "mongodb": "^5.7.0",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
