--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
+    "@vercel/analytics": "^1.0.2",
+    "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
+    "formik": "^2.4.3",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.64.0",
-    "vercel": "^31.1.0"
+    "vercel": "^31.1.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "18.2.16",
